# arabic2latin

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
arabic2latin/: __init__.py  arabic2latin.py
